# Scrabble

./: CMakeLists.txt  ConsoleApplication53.cpp  README.md  additional_func.cpp  additional_func.h  area.txt  area.xlsx  cheatsheet  game_func.cpp  game_func.h  helper.cpp  helper.h  main.cpp  makemove.cpp  makemove.h  misc_func.h  скрябл.cpp
dictionary/: dictionary.cpp  dictionary.h  letters.txt
dictionary/txt/: A.txt  B.txt  C.txt  D.txt  E.txt  F.txt  G.txt  H.txt  I.txt  J.txt  K.txt  L.txt  M.txt  N.txt  O.txt  P.txt  Q.txt  R.txt  S.txt  T.txt  U.txt  V.txt  W.txt  X.txt  Y.txt  Z.txt  count.txt  factors.txt  letters.txt
lib/: additional_func.cpp  additional_func.h  game_func.cpp  game_func.h  misc_func.cpp  misc_func.h
